--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;900&display=swap');
 
 body {
-    background-image: url(/background.jpg);
+    background-image: url(background.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
